--- a/index.html
+++ b/index.html
@@ -43,30 +43,30 @@
         <div class="row gpu-grid2">
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/ggg.webp" class="card-img-top" alt="...">
+                    <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">Peladn RX 580 2048SP</h5>
+                      <p class="card-text">Insert price here.</p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
                   </div>
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/ggg.webp" class="card-img-top" alt="...">
+                    <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">Peladn RTX 3060 12GB</h5>
+                      <p class="card-text">Insert price here.</p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
                   </div>
             </div>
             <div class="col">
                 <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/ggg.webp" class="card-img-top" alt="...">
+                    <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <h5 class="card-title">Peladn RTX 2060 6G</h5>
+                      <p class="card-text">Insert price here.</p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
                   </div>
