--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 
 
-    <section class="header ">
+    <section class="header">
         <nav>
             <a href="index.html"> <img src="./assets/images/logo.png" alt="Logo"></a>
             <div class="nav-links" id="navLinks">
@@ -39,9 +39,12 @@
 
     <!--grid system-->
 
-    <section class="container my-5 gpu-grid">
-        <div class="row gpu-grid2">
-            <div class="col">
+    <section class="container my-5">
+
+        <!--1st row-->
+
+        <div class="row gpu-grid2 py-5">
+            <div class="col py-2">
                 <div class="card" style="width: 18rem;">
                     <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -51,7 +54,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col">
+            <div class="col py-2">
                 <div class="card" style="width: 18rem;">
                     <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -61,7 +64,7 @@
                     </div>
                   </div>
             </div>
-            <div class="col">
+            <div class="col py-2">
                 <div class="card" style="width: 18rem;">
                     <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -74,11 +77,47 @@
           </div>
         </div>
     
+        <!--2nd row-->
+
+        <div class="row gpu-grid2">
+            <div class="col py-2">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Peladn RX 580 2048SP</h5>
+                      <p class="card-text">Insert price here.</p>
+                      <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col py-2">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Peladn RTX 3060 12GB</h5>
+                      <p class="card-text">Insert price here.</p>
+                      <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
+                    </div>
+                  </div>
+            </div>
+            <div class="col py-2">
+                <div class="card" style="width: 18rem;">
+                    <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Peladn RTX 2060 6G</h5>
+                      <p class="card-text">Insert price here.</p>
+                      <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
+                    </div>
+                  </div>
+            </div>
+          </div>
+        </div>
+
     </section>
 
     <!-- Footer -->
 
-    <section class="footer container py-1">
+    <section class="footer">
         <h4>About Us</h4>
         <p>We import quality Graphics Cards and provide them to customers in Bangladesh!</p>
         <div class="icons">
