--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Peladn RX 580 2048SP</h5>
-                      <p class="card-text">Insert price here.</p>
+                      <h5 class="card-title">PELADN RX 580 2048SP</h5>
+                      <p class="card-text">৳ 12,490 </p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
                   </div>
@@ -58,7 +58,7 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Peladn RTX 3060 12GB</h5>
+                      <h5 class="card-title">PELADN RTX 3060 12GB</h5>
                       <p class="card-text">Insert price here.</p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
@@ -66,9 +66,9 @@
             </div>
             <div class="col py-2">
                 <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
+                    <img src="./assets/images/rx5700xtlisting.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Peladn RTX 2060 6G</h5>
+                      <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
                       <p class="card-text">Insert price here.</p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
@@ -82,9 +82,9 @@
         <div class="row gpu-grid2">
             <div class="col py-2">
                 <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
+                    <img src="./assets/images/rtx3050listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Peladn RX 580 2048SP</h5>
+                      <h5 class="card-title">PELADN RTX 3050 8G</h5>
                       <p class="card-text">Insert price here.</p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
@@ -92,9 +92,9 @@
             </div>
             <div class="col py-2">
                 <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
+                    <img src="./assets/images/rx5500xtlisting.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Peladn RTX 3060 12GB</h5>
+                      <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
                       <p class="card-text">Insert price here.</p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
@@ -104,7 +104,7 @@
                 <div class="card" style="width: 18rem;">
                     <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Peladn RTX 2060 6G</h5>
+                      <h5 class="card-title">PELADN RTX 2060 6G</h5>
                       <p class="card-text">Insert price here.</p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
