--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <link class="icon" rel="shortcut icon" type="x-icon" href="./assets/images/logo.png">
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GPU HUB</title>
