--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                     <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">PELADN RX 580 2048SP</h5>
-                      <p class="card-text">৳ 12,490 </p>
+                      <p class="new-price">৳ 12,490 </p>
+                      <p class="old-price">৳ 12,490 </p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
                   </div>
@@ -60,7 +61,8 @@
                     <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">PELADN RTX 3060 12GB</h5>
-                      <p class="card-text">Insert price here.</p>
+                      <p class="new-price">Insert price here.</p>
+                      <p class="old-price">৳ 12,490 </p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
                   </div>
@@ -70,7 +72,8 @@
                     <img src="./assets/images/rx5700xtlisting.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
-                      <p class="card-text">Insert price here.</p>
+                      <p class="new-price">Insert price here.</p>
+                      <p class="old-price">৳ 12,490 </p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
                   </div>
@@ -86,7 +89,8 @@
                     <img src="./assets/images/rtx3050listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">PELADN RTX 3050 8G</h5>
-                      <p class="card-text">Insert price here.</p>
+                      <p class="new-price">Insert price here.</p>
+                      <p class="old-price">৳ 12,490 </p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
                   </div>
@@ -96,7 +100,8 @@
                     <img src="./assets/images/rx5500xtlisting.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
-                      <p class="card-text">Insert price here.</p>
+                      <p class="new-price">Insert price here.</p>
+                      <p class="old-price">৳ 12,490 </p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
                   </div>
@@ -106,7 +111,8 @@
                     <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">PELADN RTX 2060 6G</h5>
-                      <p class="card-text">Insert price here.</p>
+                      <p class="new-price">Insert price here.</p>
+                      <p class="old-price">৳ 12,490 </p>
                       <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
                     </div>
                   </div>
@@ -120,7 +126,7 @@
 
     <section class="footer">
         <h4>About Us</h4>
-        <p>We import quality Graphics Cards and provide them to customers in Bangladesh!</p>
+        <p class="footer-text">We import quality Graphics Cards and provide them to customers in Bangladesh!</p>
         <div class="icons">
             <a href="https://www.facebook.com/GPUHubBD" target="_blank"rel="noreferrer noopener"> <i class="fa-brands fa-facebook-f"></i></a>
             <i class="fa-brands fa-twitter"></i>
