--- a/index.html
+++ b/index.html
@@ -3,151 +3,158 @@
 
 <head>
   <link class="icon" rel="shortcut icon" type="x-icon" href="./assets/images/logo.png">
-    <meta name="viewport" content="with=device-width, initial-scale=1.0">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GPU HUB</title>
-    <link rel="stylesheet" href="./style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap"
-        rel="stylesheet">
-    <script src="https://kit.fontawesome.com/0d9ae5a944.js" crossorigin="anonymous"></script>
+  <meta name="viewport" content="with=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>GPU HUB</title>
+  <link rel="stylesheet" href="./style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/0d9ae5a944.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
 
-    <!-- header -->
+  <!-- header -->
 
 
 
-    <section class="header">
-        <nav>
-            <a href="index.html"> <img src="./assets/images/logo.png" alt="Logo"></a>
-            <div class="nav-links" id="navLinks">
-                <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
-                <ul>
-                    <li><a href="#">About</a></li>
-                    <li><a href="warranty-policies.html">Warranty Policies</a></li>
-                    <li><a href="#">Contact</a></li>
+  <section class="header">
+    <nav>
+      <a href="index.html"> <img src="./assets/images/logo.png" alt="Logo"></a>
+      <div class="nav-links" id="navLinks">
+        <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="warranty-policies.html">Warranty Policies</a></li>
+          <li><a href="#">Contact</a></li>
 
 
-                </ul>
-            </div>
-            <i class="fa-solid fa-bars" onclick="showMenu()"></i>
-        </nav>
-    </section>
+        </ul>
+      </div>
+      <i class="fa-solid fa-bars" onclick="showMenu()"></i>
+    </nav>
+  </section>
 
-    <!--grid system-->
+  <!--grid system-->
 
-    <section class="container my-5">
+  <section class="container my-5">
 
-        <!--1st row-->
+    <!--1st row-->
 
-        <div class="row gpu-grid2 py-5">
-            <div class="col py-2">
-                <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">PELADN RX 580 2048SP</h5>
-                      <p class="new-price">৳ 12,490 </p>
-                      <p class="old-price">৳ 12,490 </p>
-                      <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col py-2">
-                <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">PELADN RTX 3060 12GB</h5>
-                      <p class="new-price">Insert price here.</p>
-                      <p class="old-price">৳ 12,490 </p>
-                      <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col py-2">
-                <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/rx5700xtlisting.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
-                      <p class="new-price">Insert price here.</p>
-                      <p class="old-price">৳ 12,490 </p>
-                      <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
-                    </div>
-                  </div>
-            </div>
+    <div class="row gpu-grid2 py-5">
+      <div class="col py-2">
+        <div class="card" style="width: 18rem;">
+          <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">PELADN RX 580 2048SP</h5>
+            <p class="new-price">৳ 12,490 </p>
+            <p class="old-price">৳ 12,490 </p>
+            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+              Now</a>
           </div>
         </div>
-    
-        <!--2nd row-->
-
-        <div class="row gpu-grid2">
-            <div class="col py-2">
-                <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/rtx3050listing.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">PELADN RTX 3050 8G</h5>
-                      <p class="new-price">Insert price here.</p>
-                      <p class="old-price">৳ 12,490 </p>
-                      <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col py-2">
-                <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/rx5500xtlisting.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
-                      <p class="new-price">Insert price here.</p>
-                      <p class="old-price">৳ 12,490 </p>
-                      <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
-                    </div>
-                  </div>
-            </div>
-            <div class="col py-2">
-                <div class="card" style="width: 18rem;">
-                    <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">PELADN RTX 2060 6G</h5>
-                      <p class="new-price">Insert price here.</p>
-                      <p class="old-price">৳ 12,490 </p>
-                      <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy Now</a>
-                    </div>
-                  </div>
-            </div>
+      </div>
+      <div class="col py-2">
+        <div class="card" style="width: 18rem;">
+          <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">PELADN RTX 3060 12GB</h5>
+            <p class="new-price">Insert price here.</p>
+            <p class="old-price">৳ 12,490 </p>
+            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+              Now</a>
           </div>
         </div>
-
-    </section>
-
-    <!-- Footer -->
-
-    <section class="footer">
-        <h4>About Us</h4>
-        <p class="footer-text">We import quality Graphics Cards and provide them to customers in Bangladesh!</p>
-        <div class="icons">
-            <a href="https://www.facebook.com/GPUHubBD" target="_blank"rel="noreferrer noopener"> <i class="fa-brands fa-facebook-f"></i></a>
-            <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-linkedin-in"></i>
+      </div>
+      <div class="col py-2">
+        <div class="card" style="width: 18rem;">
+          <img src="./assets/images/rx5700xtlisting.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
+            <p class="new-price">Insert price here.</p>
+            <p class="old-price">৳ 12,490 </p>
+            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+              Now</a>
+          </div>
         </div>
-    </section>
+      </div>
+    </div>
+    </div>
 
-    <!-- ------- JavaScript for Toggle Menu ------- -->
+    <!--2nd row-->
 
-    <script>
-        var navLinks = document.getElementById("navLinks")
-        function showMenu() {
-            navLinks.style.right = "0";
-        }
-        function hideMenu() {
-            navLinks.style.right = "-200px";
-        }
+    <div class="row gpu-grid2">
+      <div class="col py-2">
+        <div class="card" style="width: 18rem;">
+          <img src="./assets/images/rtx3050listing.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">PELADN RTX 3050 8G</h5>
+            <p class="new-price">Insert price here.</p>
+            <p class="old-price">৳ 12,490 </p>
+            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+              Now</a>
+          </div>
+        </div>
+      </div>
+      <div class="col py-2">
+        <div class="card" style="width: 18rem;">
+          <img src="./assets/images/rx5500xtlisting.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
+            <p class="new-price">Insert price here.</p>
+            <p class="old-price">৳ 12,490 </p>
+            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+              Now</a>
+          </div>
+        </div>
+      </div>
+      <div class="col py-2">
+        <div class="card" style="width: 18rem;">
+          <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
+          <div class="card-body">
+            <h5 class="card-title">PELADN RTX 2060 6G</h5>
+            <p class="new-price">Insert price here.</p>
+            <p class="old-price">৳ 12,490 </p>
+            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+              Now</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+
+  </section>
+
+  <!-- Footer -->
+
+  <section class="footer">
+    <h4>About Us</h4>
+    <p class="footer-text">We import quality Graphics Cards and provide them to customers in Bangladesh!</p>
+    <div class="icons">
+      <a href="https://www.facebook.com/GPUHubBD" target="_blank" rel="noreferrer noopener"> <i
+          class="fa-brands fa-facebook-f"></i></a>
+      <i class="fa-brands fa-twitter"></i>
+      <i class="fa-brands fa-instagram"></i>
+      <i class="fa-brands fa-linkedin-in"></i>
+    </div>
+  </section>
+
+  <!-- ------- JavaScript for Toggle Menu ------- -->
+
+  <script>
+    var navLinks = document.getElementById("navLinks")
+    function showMenu() {
+      navLinks.style.right = "0";
+    }
+    function hideMenu() {
+      navLinks.style.right = "-200px";
+    }
 
 
-    </script>
+  </script>
 </body>
 
 </html>
