--- a/warranty-policies.html
+++ b/warranty-policies.html
@@ -41,33 +41,47 @@
         <div class="row">
             <div class="blog-left">
                 <h2>Warranty Policies</h2>
-                <p>Dear valued users, 
-                    Thank you very much for purchasing our products. 
+                <p>Dear valued users,
+                    Thank you very much for purchasing our products.
                     At the same time,thank you for spending your time to read the product warranty terms.
-                    If you encounter technical problems or product quality problems when using our products, please send an email to pradeon2020@163.com for aftersales services.
+                    If you encounter technical problems or product quality problems when using our products, please send
+                    an email to pradeon2020@163.com for aftersales services.
                     Aftersales commitments are as follows.</p>
                 <br>
-                <ul><li>1.For mining: 3 monthes warranty</li>
-                    <li>2.For gaming: 1 year warranty</li></ul>
+                <ul>
+                    <li>1.For mining: 3 monthes warranty</li>
+                    <li>2.For gaming: 1 year warranty</li>
+                </ul>
                 <br>
-                <p>Guarantee repair the condition of normal use and maintenance, if the product malfunctions due to the product's own quality problems within the 3-months/1-year warranty period.
+                <p>Guarantee repair the condition of normal use and maintenance, if the product malfunctions due to the
+                    product's own quality problems within the 3-months/1-year warranty period.
                     However, if the following situation occurs,it is not within the scope of free warranty. </p>
                 <br>
-                <ul><li>1. Products misjudged by users.</li>
+                <ul>
+                    <li>1. Products misjudged by users.</li>
                     <li>2. The warranty period has expired.</li>
-                    <li>3. Failing to provide valid warranty certificate or altering product serial number without permission.</li>
-                    <li>4.Damage caused by all human factors,such as unauthorized disassembly, modification,repair or attempted repair by the user.</li>
+                    <li>3. Failing to provide valid warranty certificate or altering product serial number without
+                        permission.</li>
+                    <li>4.Damage caused by all human factors,such as unauthorized disassembly, modification,repair or
+                        attempted repair by the user.</li>
                     <li>5.Damage caused by force majeure.</li>
-                    <li>6. Damage caused by improper transportation,use and storage by the user(including appearance deformation,scratches,loss of electronic components,PCB board deformation,collision.</li>
+                    <li>6. Damage caused by improper transportation,use and storage by the user(including appearance
+                        deformation,scratches,loss of electronic components,PCB board deformation,collision.</li>
                     <li>7.Surface abrasion and scratch of the product after normal use.</li>
-                    <li>8.Failure or damage caused by software or virus. For the products exceeding the warranty period, if they are still repairable, we can provide paid maintenance services.</li>
-                    <li>9.Defective appearance of products (scratch, deformation, oxidation, corrosion, rust, fracture.</li>
-                    <li>10.Product damage caused by modification or maintenance without permission, including the loss and deformation of the iron baffle plate of the graphics card, the removal of the cooling fan or cooling fin, and the residual solder on the PCB board.</li>
-                    <li>11.The fragile tag on the fan is damaged, or the bar code label is torn, damaged, blurred, altered or imitated.</li>
-                    <li>12.When the BIOS content is modified without permission, or the BIOS chip is burned or lost.</li>
+                    <li>8.Failure or damage caused by software or virus. For the products exceeding the warranty period,
+                        if they are still repairable, we can provide paid maintenance services.</li>
+                    <li>9.Defective appearance of products (scratch, deformation, oxidation, corrosion, rust, fracture.
+                    </li>
+                    <li>10.Product damage caused by modification or maintenance without permission, including the loss
+                        and deformation of the iron baffle plate of the graphics card, the removal of the cooling fan or
+                        cooling fin, and the residual solder on the PCB board.</li>
+                    <li>11.The fragile tag on the fan is damaged, or the bar code label is torn, damaged, blurred,
+                        altered or imitated.</li>
+                    <li>12.When the BIOS content is modified without permission, or the BIOS chip is burned or lost.
+                    </li>
                     <li>13.When burnout, corrosion and damage detected on the chips.</li>
                 </ul>
-                
+
             </div>
         </div>
     </section>
@@ -76,16 +90,17 @@
 
 
     <!-- Footer -->
-
     <section class="footer">
         <h4>About Us</h4>
-        <p>We import quality Graphics Cards and provide them to customers in Bangladesh!</p>
+        <p class="footer-text">We import quality Graphics Cards and provide them to customers in Bangladesh!</p>
         <div class="icons">
-           <a href="https://www.facebook.com/GPUHubBD" target="_blank"rel="noreferrer noopener"> <i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/GPUHubBD" target="_blank" rel="noreferrer noopener"> <i
+                    class="fa-brands fa-facebook-f"></i></a>
             <i class="fa-brands fa-twitter"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-linkedin-in"></i>
         </div>
+    </section>
     <!-- ------- JavaScript for Toggle Menu ------- -->
 
     <script>
