--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <div class="nav-links" id="navLinks">
         <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
         <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="warranty-policies.html">Warranty Policies</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="./index.html">HOME</a></li>
+          <li><a href="warranty-policies.html">WARRANTY POLICY</a></li>
+          <li><a href="#">ABOUT</a></li>
 
 
         </ul>
