--- a/warranty-policies.html
+++ b/warranty-policies.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link class="icon" rel="shortcut icon" type="x-icon" href="./assets/images/logo.png">
     <meta name="viewport" content="with=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Warranty Policy</title>
@@ -93,7 +94,7 @@
 
     <!-- Footer -->
     <section class="footer">
-        <h4>About Us</h4>
+        <h4 >About Us</h4>
         <p class="footer-text">We import quality Graphics Cards and provide them to customers in Bangladesh!</p>
         <div class="icons">
             <a href="https://www.facebook.com/GPUHubBD" target="_blank" rel="noreferrer noopener"> <i
