--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
           <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">PELADN RX 580 2048SP</h5>
+            <p class="old-price"><s>৳ 15,000 </s></p>
             <p class="new-price">৳ 12,490 </p>
-            <p class="old-price">৳ 12,490 </p>
             <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
               Now</a>
           </div>
@@ -62,8 +62,8 @@
           <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">PELADN RTX 3060 12GB</h5>
-            <p class="new-price">Insert price here.</p>
-            <p class="old-price">৳ 12,490 </p>
+            <p class="old-price"><s>৳ 15,000 </s></p>
+            <p class="new-price">৳ 12,490 </p>
             <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
               Now</a>
           </div>
@@ -74,8 +74,8 @@
           <img src="./assets/images/rx5700xtlisting.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
-            <p class="new-price">Insert price here.</p>
-            <p class="old-price">৳ 12,490 </p>
+            <p class="old-price"><s>৳ 15,000 </s></p>
+            <p class="new-price">৳ 12,490 </p>
             <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
               Now</a>
           </div>
@@ -92,8 +92,8 @@
           <img src="./assets/images/rtx3050listing.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">PELADN RTX 3050 8G</h5>
-            <p class="new-price">Insert price here.</p>
-            <p class="old-price">৳ 12,490 </p>
+            <p class="old-price"><s>৳ 15,000 </s></p>
+            <p class="new-price">৳ 12,490 </p>
             <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
               Now</a>
           </div>
@@ -104,8 +104,8 @@
           <img src="./assets/images/rx5500xtlisting.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
-            <p class="new-price">Insert price here.</p>
-            <p class="old-price">৳ 12,490 </p>
+            <p class="old-price"><s>৳ 15,000 </s></p>
+            <p class="new-price">৳ 12,490 </p>
             <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
               Now</a>
           </div>
@@ -116,8 +116,8 @@
           <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">PELADN RTX 2060 6G</h5>
-            <p class="new-price">Insert price here.</p>
-            <p class="old-price">৳ 12,490 </p>
+            <p class="old-price"><s>৳ 15,000 </s></p>
+            <p class="new-price">৳ 12,490 </p>
             <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
               Now</a>
           </div>
