--- a/warranty-policies.html
+++ b/warranty-policies.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;600;700&display=swap"
         rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/0d9ae5a944.js" crossorigin="anonymous"></script>
 </head>
 
@@ -52,8 +54,8 @@
                     Aftersales commitments are as follows.</p>
                 <br>
                 <ul>
-                    <li>1.For mining: 3 monthes warranty</li>
-                    <li>2.For gaming: 1 year warranty</li>
+                    <li>For mining: 3 monthes warranty</li>
+                    <li>For gaming: 1 year warranty</li>
                 </ul>
                 <br>
                 <p>Guarantee repair the condition of normal use and maintenance, if the product malfunctions due to the
@@ -61,28 +63,28 @@
                     However, if the following situation occurs,it is not within the scope of free warranty. </p>
                 <br>
                 <ul>
-                    <li>1. Products misjudged by users.</li>
-                    <li>2. The warranty period has expired.</li>
-                    <li>3. Failing to provide valid warranty certificate or altering product serial number without
+                    <li>Products misjudged by users.</li>
+                    <li>The warranty period has expired.</li>
+                    <li>Failing to provide valid warranty certificate or altering product serial number without
                         permission.</li>
-                    <li>4.Damage caused by all human factors,such as unauthorized disassembly, modification,repair or
+                    <li>Damage caused by all human factors,such as unauthorized disassembly, modification,repair or
                         attempted repair by the user.</li>
-                    <li>5.Damage caused by force majeure.</li>
-                    <li>6. Damage caused by improper transportation,use and storage by the user(including appearance
+                    <li>Damage caused by force majeure.</li>
+                    <li>Damage caused by improper transportation,use and storage by the user(including appearance
                         deformation,scratches,loss of electronic components,PCB board deformation,collision.</li>
-                    <li>7.Surface abrasion and scratch of the product after normal use.</li>
-                    <li>8.Failure or damage caused by software or virus. For the products exceeding the warranty period,
+                    <li>Surface abrasion and scratch of the product after normal use.</li>
+                    <li>Failure or damage caused by software or virus. For the products exceeding the warranty period,
                         if they are still repairable, we can provide paid maintenance services.</li>
-                    <li>9.Defective appearance of products (scratch, deformation, oxidation, corrosion, rust, fracture.
+                    <li>Defective appearance of products (scratch, deformation, oxidation, corrosion, rust, fracture.
                     </li>
-                    <li>10.Product damage caused by modification or maintenance without permission, including the loss
+                    <li>Product damage caused by modification or maintenance without permission, including the loss
                         and deformation of the iron baffle plate of the graphics card, the removal of the cooling fan or
                         cooling fin, and the residual solder on the PCB board.</li>
-                    <li>11.The fragile tag on the fan is damaged, or the bar code label is torn, damaged, blurred,
+                    <li>The fragile tag on the fan is damaged, or the bar code label is torn, damaged, blurred,
                         altered or imitated.</li>
-                    <li>12.When the BIOS content is modified without permission, or the BIOS chip is burned or lost.
+                    <li>When the BIOS content is modified without permission, or the BIOS chip is burned or lost.
                     </li>
-                    <li>13.When burnout, corrosion and damage detected on the chips.</li>
+                    <li>When burnout, corrosion and damage detected on the chips.</li>
                 </ul>
 
             </div>
