--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
         <ul>
           <li><a href="./index.html">HOME</a></li>
+          <li><a href="#product-listing">PRODUCTS</a></li>
           <li><a href="warranty-policies.html">WARRANTY POLICY</a></li>
           <li><a href="#">ABOUT</a></li>
 
@@ -40,23 +41,25 @@
 
   <!--grid system-->
 
-  <section class="container my-5">
+  <section id="product-listing" class="container my-5">
 
     <!--1st row-->
 
     <div class="row gpu-grid2 py-5">
-      <div class="col py-2">
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">PELADN RX 580 2048SP</h5>
-            <p class="old-price"><s>৳ 15,000 </s></p>
-            <p class="new-price">৳ 12,490 </p>
-            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-              Now</a>
+      <a class="product-cards" href="./RX580-product-page.html">
+        <div class="col py-2">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PELADN RX 580 2048SP</h5>
+              <p class="old-price"><s>৳ 15,000 </s></p>
+              <p class="new-price">৳ 12,490 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+                Now</a>
+            </div>
           </div>
         </div>
-      </div>
+      </a>
       <div class="col py-2">
         <div class="card" style="width: 18rem;">
           <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
