--- a/warranty-policies.html
+++ b/warranty-policies.html
@@ -29,8 +29,10 @@
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="./index.html">HOME</a></li>
+                    <li><a href="index.html#product-listing">PRODUCTS</a></li>
                     <li><a href="warranty-policies.html">WARRANTY POLICY</a></li>
                     <li><a href="#">ABOUT</a></li>
+
 
 
                 </ul>
@@ -96,7 +98,7 @@
 
     <!-- Footer -->
     <section class="footer">
-        <h4 >About Us</h4>
+        <h4>About Us</h4>
         <p class="footer-text">We import quality Graphics Cards and provide them to customers in Bangladesh!</p>
         <div class="icons">
             <a href="https://www.facebook.com/GPUHubBD" target="_blank" rel="noreferrer noopener"> <i
