--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <!--1st row-->
 
     <div class="row gpu-grid2 py-5">
-      <a class="product-cards" href="./RX580-product-page.html">
-        <div class="col py-2">
+      <div class="col py-2">
+        <a class="product-cards" href="./products/RX580-product-page.html">
           <div class="card" style="width: 18rem;">
             <img src="./assets/images/rx580listing.webp" class="card-img-top" alt="...">
             <div class="card-body">
@@ -58,31 +58,35 @@
                 Now</a>
             </div>
           </div>
-        </div>
-      </a>
-      <div class="col py-2">
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">PELADN RTX 3060 12GB</h5>
-            <p class="old-price"><s>৳ 15,000 </s></p>
-            <p class="new-price">৳ 12,490 </p>
-            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-              Now</a>
-          </div>
-        </div>
+        </a>
       </div>
       <div class="col py-2">
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/images/rx5700xtlisting.webp" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
-            <p class="old-price"><s>৳ 15,000 </s></p>
-            <p class="new-price">৳ 12,490 </p>
-            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-              Now</a>
+        <a class="product-cards" href="./products/RTX3060-product-page.html">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PELADN RTX 3060 12GB</h5>
+              <p class="old-price"><s>৳ 15,000 </s></p>
+              <p class="new-price">৳ 12,490 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+                Now</a>
+            </div>
           </div>
-        </div>
+        </a>
+      </div>
+      <div class="col py-2">
+        <a class="product-cards" href="./products/RX5700-product-page.html">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/rx5700xtlisting.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
+              <p class="old-price"><s>৳ 15,000 </s></p>
+              <p class="new-price">৳ 12,490 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+                Now</a>
+            </div>
+          </div>
+        </a>
       </div>
     </div>
     </div>
@@ -91,40 +95,46 @@
 
     <div class="row gpu-grid2">
       <div class="col py-2">
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/images/rtx3050listing.webp" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">PELADN RTX 3050 8G</h5>
-            <p class="old-price"><s>৳ 15,000 </s></p>
-            <p class="new-price">৳ 12,490 </p>
-            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-              Now</a>
+        <a class="product-cards" href="./products/RTX3050-product-page.html">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/rtx3050listing.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PELADN RTX 3050 8G</h5>
+              <p class="old-price"><s>৳ 15,000 </s></p>
+              <p class="new-price">৳ 12,490 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+                Now</a>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
       <div class="col py-2">
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/images/rx5500xtlisting.webp" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
-            <p class="old-price"><s>৳ 15,000 </s></p>
-            <p class="new-price">৳ 12,490 </p>
-            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-              Now</a>
+        <a class="product-cards" href="./products/RX5500-product-page.html">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/rx5500xtlisting.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
+              <p class="old-price"><s>৳ 15,000 </s></p>
+              <p class="new-price">৳ 12,490 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+                Now</a>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
       <div class="col py-2">
-        <div class="card" style="width: 18rem;">
-          <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">PELADN RTX 2060 6G</h5>
-            <p class="old-price"><s>৳ 15,000 </s></p>
-            <p class="new-price">৳ 12,490 </p>
-            <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-              Now</a>
+        <a class="product-cards" href="./products/RTX2060-product-page.html">
+          <div class="card" style="width: 18rem;">
+            <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">PELADN RTX 2060 6G</h5>
+              <p class="old-price"><s>৳ 15,000 </s></p>
+              <p class="new-price">৳ 12,490 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
+                Now</a>
+            </div>
           </div>
-        </div>
+        </a>
       </div>
     </div>
     </div>
