--- a/products/RX5700XT-product-page.html
+++ b/products/RX5700XT-product-page.html
@@ -50,19 +50,18 @@
 
                     <h1 class="display-5 fw-bolder">PELADN RX 5700 XT 8G</h1>
                     <div class="fs-5 mb-5">
-                        <span class="text-decoration-line-through" style="font-size: large;">BDT 14,000</span>
-                        <span style="color: red
-                        ;font-size: larger;">BDT 12,490</span>
+
+                        <span style="color: rgb(0, 0, 0)
+                        ;font-size: larger;">&nbsp;BDT 24,999</span>
                     </div>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem
-                        quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis
-                        delectus ipsam minima ea iste laborum vero?</p>
+                    <p class="lead" style="color: red">*Currently, this GPU is out of stock. We can bring it for you if
+                        you order from us.</p>
                     <div class="d-flex">
 
                         <a href="https://m.me/GPUHubBD" target="_blank"> <button
                                 class="btn btn-outline-dark flex-shrink-0" type="button">
                                 <i class="bi-cart-fill me-1"></i>
-                                BUY NOW
+                                PRE-ORDER
                             </button></a>
                     </div>
                 </div>
