--- a/products/RX580-product-page.html
+++ b/products/RX580-product-page.html
@@ -54,9 +54,10 @@
                         <span style="color: red
                         ;font-size: larger;">BDT 12,490</span>
                     </div>
-                    <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium at dolorem
-                        quidem modi. Nam sequi consequatur obcaecati excepturi alias magni, accusamus eius blanditiis
-                        delectus ipsam minima ea iste laborum vero?</p>
+                    <p class="lead" style="color: rgb(102, 100, 100);">The Peladn RX 580 2048SP provides good
+                        performance for its price range. If you're looking for the best possible performance, the
+                        standard RX 580 8GB is the way to go, but if you're looking for a more budget-friendly option,
+                        the 2048SP version could be a good choice for you.</p>
                     <div class="d-flex">
 
                         <a href="https://m.me/GPUHubBD" target="_blank"> <button
