--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
               <h5 class="card-title">PELADN RX 580 2048SP</h5>
               <p class="old-price"><s>৳ 15,000 </s></p>
               <p class="new-price">৳ 12,490 </p>
-              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-                Now</a>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">BUY
+                NOW</a>
             </div>
           </div>
         </a>
@@ -66,24 +66,24 @@
             <img src="./assets/images/rtx3060listing.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PELADN RTX 3060 12GB</h5>
-              <p class="old-price"><s>৳ 15,000 </s></p>
-              <p class="new-price">৳ 12,490 </p>
-              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-                Now</a>
+              <br>
+              <p class="new-pricent">৳ 52,000 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
+                rel="noreferrer noopener">PRE-ORDER</a>
             </div>
           </div>
         </a>
       </div>
       <div class="col py-2">
-        <a class="product-cards" href="./products/RX5700-product-page.html">
+        <a class="product-cards" href="./products/RX5700XT-product-page.html">
           <div class="card" style="width: 18rem;">
             <img src="./assets/images/rx5700xtlisting.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PELADN RX 5700 XT 8G</h5>
-              <p class="old-price"><s>৳ 15,000 </s></p>
-              <p class="new-price">৳ 12,490 </p>
-              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-                Now</a>
+              <br>
+              <p class="new-pricent">৳ 24,999 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
+                rel="noreferrer noopener">PRE-ORDER</a>
             </div>
           </div>
         </a>
@@ -100,24 +100,24 @@
             <img src="./assets/images/rtx3050listing.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PELADN RTX 3050 8G</h5>
-              <p class="old-price"><s>৳ 15,000 </s></p>
-              <p class="new-price">৳ 12,490 </p>
-              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-                Now</a>
+              <br>
+              <p class="new-pricent">৳ 39,990 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
+                rel="noreferrer noopener">PRE-ORDER</a>
             </div>
           </div>
         </a>
       </div>
       <div class="col py-2">
-        <a class="product-cards" href="./products/RX5500-product-page.html">
+        <a class="product-cards" href="./products/RX5500XT-product-page.html">
           <div class="card" style="width: 18rem;">
             <img src="./assets/images/rx5500xtlisting.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PELADN RX 5500 XT 8G</h5>
-              <p class="old-price"><s>৳ 15,000 </s></p>
-              <p class="new-price">৳ 12,490 </p>
-              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-                Now</a>
+              <br>
+              <p class="new-pricent">৳ 15,000 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
+                rel="noreferrer noopener">PRE-ORDER</a>
             </div>
           </div>
         </a>
@@ -128,10 +128,10 @@
             <img src="./assets/images/rtx2060listing.webp" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">PELADN RTX 2060 6G</h5>
-              <p class="old-price"><s>৳ 15,000 </s></p>
-              <p class="new-price">৳ 12,490 </p>
-              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Buy
-                Now</a>
+              <br>
+              <p class="new-pricent">৳ 30,999 </p>
+              <a href="https://m.me/GPUHubBD" class="btn btn-primary" target="_blank"
+                rel="noreferrer noopener">PRE-ORDER</a>
             </div>
           </div>
         </a>
